OPORTO okay na ang profile and edit profile function

--- a/app/src/main/res/layout/activity_edit_profile.xml
+++ b/app/src/main/res/layout/activity_edit_profile.xml
@@ -9,7 +9,7 @@
         android:id="@+id/navTop"
         android:layout_width="match_parent"
         android:layout_height="68dp"
-        android:src="@drawable/navtop"></ImageView>
+        android:src="@drawable/navtop" />
 
     <LinearLayout
         android:id="@+id/navTopLinearLayout"
@@ -17,6 +17,7 @@
         android:layout_height="wrap_content"
         android:layout_alignTop="@id/navTop"
         android:orientation="horizontal">
+
         <ImageButton
             android:id="@+id/backTop"
             android:layout_width="match_parent"
@@ -27,8 +28,8 @@
             android:layout_weight="4"
             android:background="#E4EFFF"
             android:scaleType="fitCenter"
-            android:src="@drawable/back1">
-        </ImageButton>
+            android:src="@drawable/back1" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -44,8 +45,7 @@
                 android:textAlignment="center"
                 android:textColor="@color/black"
                 android:textSize="20dp"
-                android:textStyle="bold">
-            </TextView>
+                android:textStyle="bold" />
         </LinearLayout>
     </LinearLayout>
 
@@ -70,8 +70,7 @@
                 android:layout_marginTop="20dp"
                 android:textSize="25dp"
                 android:textStyle="bold"
-                android:textColor="@color/black">
-            </TextView>
+                android:textColor="@color/black" />
 
             <ImageButton
                 android:id="@+id/profilePic"
@@ -86,7 +85,7 @@
                 android:scaleType="centerCrop"
                 android:layout_marginTop="20dp"
                 android:src="@drawable/person_placeholder"
-                android:layout_below="@+id/txt"/>
+                android:layout_below="@+id/txt" />
 
             <TextView
                 android:id="@+id/txtName"
@@ -98,7 +97,7 @@
                 android:text="Name:"
                 android:textColor="@color/black"
                 android:textSize="20dp"
-                android:textStyle="bold"></TextView>
+                android:textStyle="bold" />
 
             <EditText
                 android:id="@+id/editName"
@@ -110,8 +109,7 @@
                 android:background="@drawable/bg_login_white_radius"
                 android:elevation="10dp"
                 android:hint="Name"
-                android:paddingLeft="10dp">
-            </EditText>
+                android:paddingLeft="10dp" />
 
             <TextView
                 android:id="@+id/txtEmail"
@@ -124,7 +122,7 @@
                 android:text="Email:"
                 android:textColor="@color/black"
                 android:textSize="20dp"
-                android:textStyle="bold"></TextView>
+                android:textStyle="bold" />
 
             <EditText
                 android:id="@+id/editEmail"
@@ -137,8 +135,7 @@
                 android:layout_marginRight="30dp"
                 android:layout_marginLeft="30dp"
                 android:paddingLeft="10dp"
-                android:inputType="textEmailAddress">
-            </EditText>
+                android:inputType="textEmailAddress" />
 
             <TextView
                 android:id="@+id/txtPhone"
@@ -151,7 +148,7 @@
                 android:text="Mobile Phone:"
                 android:textColor="@color/black"
                 android:textSize="20dp"
-                android:textStyle="bold"></TextView>
+                android:textStyle="bold" />
 
             <EditText
                 android:id="@+id/editPhone"
@@ -164,8 +161,7 @@
                 android:layout_marginRight="30dp"
                 android:layout_marginLeft="30dp"
                 android:paddingLeft="10dp"
-                android:inputType="number">
-            </EditText>
+                android:inputType="number" />
 
             <Button
                 android:id="@+id/saveButton"
@@ -179,7 +175,7 @@
                 android:text="Save"
                 android:textColor="@color/white"
                 android:textStyle="bold"
-                android:background="@drawable/bg_login_button"></Button>
+                android:background="@drawable/bg_login_button" />
 
         </RelativeLayout>
     </ScrollView>
