--- a/app/src/main/res/layout/activity_profile_page.xml
+++ b/app/src/main/res/layout/activity_profile_page.xml
@@ -1,12 +1,12 @@
-<?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+
     <ImageView
         android:id="@+id/navTop"
         android:layout_width="match_parent"
         android:layout_height="68dp"
-        android:src="@drawable/navtop"></ImageView>
+        android:src="@drawable/navtop" />
 
     <LinearLayout
         android:id="@+id/navTopLinearLayout"
@@ -14,6 +14,7 @@
         android:layout_height="wrap_content"
         android:layout_alignTop="@id/navTop"
         android:orientation="horizontal">
+
         <ImageButton
             android:id="@+id/backTop"
             android:layout_width="match_parent"
@@ -24,8 +25,8 @@
             android:layout_weight="4"
             android:background="#E4EFFF"
             android:scaleType="fitCenter"
-            android:src="@drawable/back1">
-        </ImageButton>
+            android:src="@drawable/back1" />
+
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -41,14 +42,9 @@
                 android:textAlignment="center"
                 android:textColor="@color/black"
                 android:textSize="20dp"
-                android:textStyle="bold">
-            </TextView>
+                android:textStyle="bold" />
         </LinearLayout>
     </LinearLayout>
-
-
-
-    <!--CONTENT-->
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -76,7 +72,7 @@
                 android:clipToOutline="true"
                 android:scaleType="centerCrop"
                 android:src="@drawable/person_placeholder"
-                android:layout_centerHorizontal="true"/>
+                android:layout_centerHorizontal="true" />
 
             <Button
                 android:id="@+id/editProfileButton"
@@ -91,10 +87,6 @@
                 android:textColor="#737373"
                 android:textSize="20sp" />
 
-
-
-
-
             <TextView
                 android:id="@+id/nameTextView"
                 android:layout_width="wrap_content"
@@ -107,8 +99,6 @@
                 android:textSize="20sp"
                 android:textStyle="bold" />
 
-
-
             <TextView
                 android:id="@+id/emailTextview"
                 android:layout_width="wrap_content"
@@ -119,7 +109,7 @@
                 android:text="Email:"
                 android:textSize="20sp"
                 android:textStyle="bold"
-                android:textColor="@color/black"/>
+                android:textColor="@color/black" />
 
             <TextView
                 android:id="@+id/phoneTextview"
@@ -131,9 +121,7 @@
                 android:text="Mobile #:"
                 android:textSize="20sp"
                 android:textStyle="bold"
-                android:textColor="@color/black"/>
-
-
+                android:textColor="@color/black" />
         </RelativeLayout>
 
         <Button
@@ -150,22 +138,13 @@
             android:textStyle="bold"
             android:textSize="20sp"
             android:elevation="200dp"
-            android:background="@drawable/bg_login_button">
-
-        </Button>
-
-
+            android:background="@drawable/bg_login_button" />
     </RelativeLayout>
 
-
-
-
-    <!--    nav bottom-->
     <fragment
         android:id="@+id/navBarFragment"
         android:name="com.intprog.helpinghands.NavBarFragment"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true" />
-
 </RelativeLayout>
