--- a/app/src/main/res/layout/activity_login_page.xml
+++ b/app/src/main/res/layout/activity_login_page.xml
@@ -93,21 +93,39 @@
                 android:elevation="10dp">
             </ImageView>
 
-            <EditText
-                android:id="@+id/passwordEditText"
-                android:layout_width="250dp"
-                android:layout_height="48dp"
-                android:paddingLeft="15dp"
-                android:layout_marginLeft="18dp"
-                android:layout_marginTop="15dp"
+            <RelativeLayout
+                android:layout_width="260dp"
+                android:layout_height="58dp"
+                android:layout_marginLeft="12dp"
+                android:layout_marginTop="10dp"
                 android:layout_marginBottom="5dp"
                 android:layout_marginRight="25dp"
-                android:hint="Password"
-                android:background="@drawable/bg_login_white_radius"
-                android:inputType="textPassword"
                 android:elevation="5dp">
-            </EditText>
+
+                <EditText
+                    android:id="@+id/passwordEditText"
+                    android:layout_width="250dp"
+                    android:layout_height="48dp"
+                    android:layout_centerInParent="true"
+                    android:background="@drawable/bg_login_white_radius"
+                    android:elevation="5dp"
+                    android:hint="Password"
+                    android:inputType="textPassword"
+                    android:paddingLeft="15dp" />
+
+                <ImageView
+                    android:id="@+id/passwordVisibilityToggle"
+                    android:layout_width="24dp"
+                    android:layout_height="match_parent"
+                    android:layout_alignParentEnd="true"
+                    android:layout_centerVertical="true"
+                    android:layout_marginEnd="15dp"
+                    android:background="@android:color/transparent"
+                    android:src="@drawable/pw_visibility_off"
+                    android:elevation="5dp"/>
+            </RelativeLayout>
         </LinearLayout>
+
 
 
         <LinearLayout
