--- a/app/src/main/res/layout/activity_registration.xml
+++ b/app/src/main/res/layout/activity_registration.xml
@@ -8,7 +8,6 @@
     android:background="@color/white"
     tools:context=".RegistrationActivity">
 
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -24,16 +23,13 @@
             android:layout_weight="4"
             android:background="@color/white"
             android:scaleType="fitCenter"
-            android:src="@drawable/back1"></ImageButton>
+            android:src="@drawable/back1" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1" />
     </LinearLayout>
-
-
-
 
     <RelativeLayout
         android:id="@+id/registrationImgRelativeLayout"
@@ -50,6 +46,7 @@
             android:layout_width="match_parent"
             android:layout_height="150dp"
             android:src="@drawable/logo" />
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -59,7 +56,8 @@
             android:textAlignment="center"
             android:textColor="@color/black"
             android:textStyle="bold"
-            android:textSize="25dp"/>
+            android:textSize="25dp" />
+
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -70,11 +68,8 @@
             android:lineSpacingExtra="10dp"
             android:textColor="@color/black"
             android:text="Join today to make a difference in \nyour community!"
-            android:textSize="16dp"/>
+            android:textSize="16dp" />
     </RelativeLayout>
-
-
-
 
     <LinearLayout
         android:id="@+id/emailLinearLayout"
@@ -96,37 +91,65 @@
             android:layout_weight="1"
             android:layout_marginBottom="20dp"
             android:background="@drawable/bg_login_white_radius"
-            android:elevation="5dp"/>
+            android:elevation="5dp" />
 
-
-        <EditText
-            android:id="@+id/passwordEditText"
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:hint="Password"
-            android:layout_marginHorizontal="15dp"
-            android:inputType="textPassword"
-            android:paddingLeft="20dp"
-            android:layout_weight="1"
+            android:layout_height="60dp"
             android:layout_marginBottom="20dp"
-            android:background="@drawable/bg_login_white_radius"
-            android:elevation="5dp"/>
+            android:layout_marginHorizontal="10dp">
 
-        <EditText
-            android:id="@+id/confirmPasswordEditText"
+            <EditText
+                android:id="@+id/passwordEditText"
+                android:layout_width="281dp"
+                android:layout_height="50dp"
+                android:hint="Password"
+                android:inputType="textPassword"
+                android:layout_centerInParent="true"
+                android:paddingLeft="20dp"
+                android:background="@drawable/bg_login_white_radius"
+                android:elevation="5dp" />
+
+            <ImageView
+                android:id="@+id/passwordToggle"
+                android:layout_width="24dp"
+                android:layout_height="match_parent"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                android:layout_marginEnd="15dp"
+                android:background="@android:color/transparent"
+                android:src="@drawable/pw_visibility_off"
+                android:elevation="5dp" />
+        </RelativeLayout>
+
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:hint="Confirm Password"
-            android:layout_marginHorizontal="15dp"
-            android:inputType="textPassword"
-            android:layout_marginLeft="15dp"
-            android:paddingLeft="20dp"
-            android:layout_weight="1"
+            android:layout_height="60dp"
             android:layout_marginBottom="20dp"
-            android:background="@drawable/bg_login_white_radius"
-            android:elevation="5dp"/>
+            android:layout_marginHorizontal="10dp">
 
+            <EditText
+                android:id="@+id/confirmPasswordEditText"
+                android:layout_width="281dp"
+                android:layout_height="50dp"
+                android:layout_centerInParent="true"
+                android:background="@drawable/bg_login_white_radius"
+                android:elevation="5dp"
+                android:hint="Confirm Password"
+                android:inputType="textPassword"
+                android:paddingLeft="20dp" />
 
+            <ImageView
+                android:id="@+id/confirmPasswordToggle"
+                android:layout_width="24dp"
+                android:layout_height="match_parent"
+                android:layout_alignParentEnd="true"
+                android:layout_centerVertical="true"
+                android:layout_marginEnd="15dp"
+                android:background="@android:color/transparent"
+                android:src="@drawable/pw_visibility_off"
+                android:elevation="5dp" />
+        </RelativeLayout>
     </LinearLayout>
 
     <Button
@@ -140,12 +163,5 @@
         android:background="@drawable/rounded_corner"
         android:text="Create Account"
         android:textColor="@color/white"
-        android:elevation="10dp">
-
-    </Button>
-
-
-
-
-
+        android:elevation="10dp" />
 </RelativeLayout>
