OPORTO naa nay sign up signin database

--- a/app/src/main/res/layout/activity_login_page.xml
+++ b/app/src/main/res/layout/activity_login_page.xml
@@ -178,6 +178,14 @@
 
         </Button>
 
+        <com.google.android.gms.common.SignInButton
+            android:id="@+id/googleSigninButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:visibility="visible" />
+
+
     </LinearLayout>
 
 
