OPORTO ge tarung ra ang layout sa dialog sa forgot pass

--- a/app/src/main/res/layout/forgot_password_dialog.xml
+++ b/app/src/main/res/layout/forgot_password_dialog.xml
@@ -7,16 +7,16 @@
     <EditText
         android:id="@+id/emailEditText"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:hint="Enter your email"
         android:inputType="textEmailAddress"
-        android:layout_marginBottom="16dp"/>
+        android:layout_marginTop="20dp"
+        android:layout_marginBottom="20dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:background="@drawable/bg_login_white_radius"
+        android:elevation="5dp"/>
 
-    <Button
-        android:id="@+id/sendEmailButton"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="Send Email"
-        android:layout_below="@id/emailEditText"/>
+
 
 </RelativeLayout>
