--- a/app/src/main/res/layout/activity_volunteer_campaign_summary.xml
+++ b/app/src/main/res/layout/activity_volunteer_campaign_summary.xml
@@ -78,7 +78,7 @@
                 android:layout_below="@id/summaryTextView"
                 android:orientation="vertical">
 
-                <ImageView
+                <com.intprog.helpinghands.customviews.RoundedImageView
                     android:id="@+id/uploadedImageView"
                     android:layout_width="300dp"
                     android:layout_height="200dp"
