--- a/app/src/main/res/layout/activity_donation_campaign_summary_page.xml
+++ b/app/src/main/res/layout/activity_donation_campaign_summary_page.xml
@@ -77,7 +77,7 @@
         android:layout_marginTop="10dp">
     </TextView>
 
-            <ImageView
+            <com.intprog.helpinghands.customviews.RoundedImageView
                 android:id="@+id/imageDonationSummary"
                 android:layout_width="300dp"
                 android:layout_height="200dp"
@@ -87,7 +87,7 @@
                 android:background="@android:color/transparent"
                 android:clickable="false"
                 android:scaleType="centerCrop"
-                android:elevation="5dp"></ImageView>
+                android:elevation="5dp"></com.intprog.helpinghands.customviews.RoundedImageView>
 
             <ImageView
                 android:id="@+id/contentSummary"
