--- a/app/src/main/res/layout/activity_unspecialized_summary.xml
+++ b/app/src/main/res/layout/activity_unspecialized_summary.xml
@@ -69,7 +69,7 @@
                 android:textSize="20sp"
                 android:textStyle="bold"></TextView>
 
-            <ImageButton
+            <com.intprog.helpinghands.customviews.RoundedImageButton
                 android:id="@+id/summaryImageButton"
                 android:layout_width="300dp"
                 android:layout_height="200dp"
