--- a/app/src/main/res/layout/activity_volunteer_campaign_posting_page.xml
+++ b/app/src/main/res/layout/activity_volunteer_campaign_posting_page.xml
@@ -104,7 +104,7 @@
                 android:orientation="vertical"
                 android:layout_below="@id/volunteerCampaignTextView">
 
-                <ImageButton
+                <com.intprog.helpinghands.customviews.RoundedImageButton
                     android:id="@+id/uploadedImageView"
                     android:layout_width="300dp"
                     android:layout_height="200dp"
