--- a/app/src/main/res/layout/activity_volunteer_campaign_selection_item.xml
+++ b/app/src/main/res/layout/activity_volunteer_campaign_selection_item.xml
@@ -21,7 +21,7 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/campaignTitleTextView">
 
-        <ImageButton
+        <com.intprog.helpinghands.customviews.RoundedImageButton
             android:id="@+id/activityImageView"
             android:layout_width="200dp"
             android:layout_height="100dp"
