--- a/app/src/main/res/layout/row_featured_opportunities.xml
+++ b/app/src/main/res/layout/row_featured_opportunities.xml
@@ -6,50 +6,52 @@
     android:layout_marginVertical="10dp"
     android:layout_marginHorizontal="5dp"
     app:cardCornerRadius="20dp"
-    app:cardElevation="6dp">
+    app:cardElevation="6dp"
+    android:clipToOutline="true">
     <RelativeLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="5dp">
+        android:layout_marginLeft="5dp"
+        android:clipToOutline="true">
 
-        <ImageView
+        <com.intprog.helpinghands.customviews.RoundedImageView
             android:id="@+id/image1"
             android:layout_width="170dp"
             android:layout_height="90dp"
             android:layout_centerHorizontal="true"
             android:layout_marginTop="5dp"
-            android:background="@drawable/rounded_rectangle"
-            android:clipToOutline="true"
             android:scaleType="centerCrop"
-            android:src="@drawable/placeholder_image1" />
+            app:srcCompat="@drawable/placeholder_image1" />
+
 
         <TextView
             android:id="@+id/title"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/image1"
+            android:layout_marginTop="5dp"
             android:layout_marginLeft="5dp"
             android:text="Title"
             android:textSize="15dp"
             android:textStyle="bold"
             android:textColor="@color/black"/>
 
-        <TextView
-            android:id="@+id/category"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/title"
-            android:layout_marginLeft="5dp"
-            android:text="Category"
-            android:textSize="10sp"
-            android:textColor="@color/black"/>
+<!--        <TextView-->
+<!--            android:id="@+id/category"-->
+<!--            android:layout_width="wrap_content"-->
+<!--            android:layout_height="wrap_content"-->
+<!--            android:layout_below="@id/title"-->
+<!--            android:layout_marginLeft="5dp"-->
+<!--            android:text="Category"-->
+<!--            android:textSize="10sp"-->
+<!--            android:textColor="@color/black"/>-->
 
         <Button
             android:id="@+id/viewDetailsButton"
             android:layout_width="100dp"
             android:layout_height="25dp"
-            android:layout_below="@id/category"
-            android:layout_marginTop="10dp"
+            android:layout_below="@id/title"
+            android:layout_marginTop="15dp"
             android:layout_marginLeft="20dp"
             android:background="@drawable/bg_radius_ten_lightblue"
             android:text="View Details"
@@ -60,9 +62,9 @@
             android:id="@+id/bell"
             android:layout_width="20dp"
             android:layout_height="20dp"
-            android:layout_below="@id/category"
+            android:layout_below="@id/title"
             android:layout_marginLeft="25dp"
-            android:layout_marginTop="10dp"
+            android:layout_marginTop="15dp"
             android:layout_toRightOf="@id/viewDetailsButton"
             android:background="@android:color/transparent"
             android:scaleType="fitCenter"
