featured opportunities view details button working

--- a/app/src/main/res/layout/activity_donation_campaign_status_page.xml
+++ b/app/src/main/res/layout/activity_donation_campaign_status_page.xml
@@ -229,31 +229,32 @@
 
             </TextView>
 
-            <ImageView
+            <RelativeLayout
                 android:id="@+id/bgCategory"
-                android:layout_width="280dp"
+                android:layout_width="wrap_content"
                 android:layout_height="30dp"
                 android:layout_below="@+id/amountDonatedLabel"
                 android:layout_marginLeft="7dp"
                 android:layout_marginTop="15dp"
                 android:layout_marginBottom="5dp"
+                android:paddingHorizontal="10dp"
                 android:layout_toRightOf="@+id/categoryLabel"
                 android:background="@drawable/bg_radius_ten_gray"
-                android:elevation="3dp"></ImageView>
+                android:elevation="3dp">
+                <TextView
+                    android:id="@+id/categoryTextView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/amountDonatedLabel"
+                    android:layout_toRightOf="@+id/categoryLabel"
+                    android:elevation="4dp"
+                    android:text="Category"
+                    android:textColor="@color/black"></TextView>
+
+            </RelativeLayout>
 
 
-            <TextView
-                android:id="@+id/categoryTextView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/amountDonatedLabel"
-                android:layout_marginLeft="15dp"
-                android:layout_marginTop="20dp"
-                android:layout_marginBottom="5dp"
-                android:layout_toRightOf="@+id/categoryLabel"
-                android:elevation="3dp"
-                android:text="Category"
-                android:textColor="@color/black"></TextView>
+
 
             <TextView
                 android:id="@+id/txtPeopleWhoDonated"
