--- a/app/src/main/res/layout/activity_payment_page.xml
+++ b/app/src/main/res/layout/activity_payment_page.xml
@@ -7,6 +7,7 @@
     tools:context=".screens.PaymentPageActivity">
 
     <RelativeLayout
+        android:id="@+id/navTopRelativeLayout"
         android:layout_width="match_parent"
         android:layout_height="68dp">
         <ImageView
@@ -37,12 +38,12 @@
                 android:id="@+id/paymentTV"
                 android:layout_width="match_parent"
                 android:layout_height="50dp"
-                android:layout_marginLeft="60dp"
+                android:layout_marginLeft="10dp"
                 android:layout_marginTop="18dp"
                 android:layout_marginRight="30dp"
                 android:layout_marginBottom="5dp"
                 android:layout_weight="1"
-                android:text="Payment"
+                android:text="Support Our Cause"
                 android:textColor="@color/black"
                 android:textSize="22dp"
                 android:textStyle="bold" />
@@ -53,28 +54,44 @@
         android:id="@+id/donateTV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Your donations help us improve our app and provide better services to everyone. Thank you for your support!"
+        android:text="&quot;Your donations help us improve our app and provide better services to everyone. Thank you for your support!&quot;"
         android:textColor="@color/black"
-        android:textSize="20sp"
+        android:textSize="15sp"
         android:gravity="center"
-        android:layout_marginTop="80dp"
-        android:layout_centerHorizontal="true"/>
+        android:layout_below="@id/navTopRelativeLayout"
+        android:layout_marginTop="90dp"
+        android:layout_marginHorizontal="30dp"
+        android:layout_centerHorizontal="true"
+        android:textStyle="italic"/>
+    <TextView
+        android:id="@+id/helpingHands"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="- HelpingHands"
+        android:textColor="@color/black"
+        android:textSize="15sp"
+        android:gravity="center"
+        android:layout_below="@id/donateTV"
+        android:layout_marginTop="0dp"
+        android:layout_marginRight="70dp"
+        android:layout_alignParentEnd="true"
+        android:textStyle="italic"/>
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="285dp"
+        android:layout_marginTop="290dp"
         android:textStyle="bold"
         android:textColor="@color/black"
-        android:textSize="25sp"
-        android:text="₱:"
+        android:textSize="20sp"
+        android:text="₱: "
         android:layout_toStartOf="@+id/amountEditText"/>
 
 
 
     <EditText
         android:id="@+id/amountEditText"
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:hint="Enter amount"
         android:inputType="numberDecimal"
@@ -86,15 +103,16 @@
 
     <Button
         android:id="@+id/stripeButton"
-        android:layout_width="100dp"
-        android:layout_height="wrap_content"
+        android:layout_width="120dp"
+        android:layout_height="40dp"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="10dp"
         android:background="@drawable/btn_continue"
-        android:text="Pay now"
+        android:text="Donate"
         android:layout_below="@id/amountEditText"
-        android:textSize="15sp"
-        android:textStyle="bold" />
+        android:textSize="12sp"
+        android:textStyle="bold"
+        android:textColor="@color/white"/>
 
     <fragment
         android:id="@+id/navBarFragment"
