--- a/app/src/main/res/layout/fragment_nav_bar.xml
+++ b/app/src/main/res/layout/fragment_nav_bar.xml
@@ -11,7 +11,8 @@
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:layout_alignParentBottom="true"
-        android:src="@drawable/navbottom" />
+        android:src="@drawable/navbottom"
+        android:layout_marginTop="20dp"/>
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -20,18 +21,6 @@
         android:layout_alignParentBottom="true"
         android:orientation="horizontal">
 
-        <ImageButton
-            android:id="@+id/notificationsImageButton"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_marginLeft="40dp"
-            android:layout_marginTop="15dp"
-            android:layout_marginRight="40dp"
-            android:layout_marginBottom="15dp"
-            android:layout_weight="1"
-            android:background="@drawable/selector_button"
-            android:scaleType="fitCenter"
-            android:src="@drawable/bell" />
 
         <ImageButton
             android:id="@+id/homeImageButton"
@@ -46,6 +35,21 @@
             android:scaleType="fitCenter"
             android:src="@drawable/home" />
 
+        <ImageView
+            android:id="@+id/logoImage"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="40dp"
+            android:layout_marginTop="5dp"
+            android:layout_marginRight="40dp"
+            android:layout_marginBottom="5dp"
+            android:layout_weight="1"
+            android:background="@drawable/selector_button"
+            android:scaleType="fitCenter"
+
+            android:adjustViewBounds="true"
+            android:maxHeight="100dp" /> <!-- Adjust the maxHeight as needed -->
+
         <ImageButton
             android:id="@+id/profileImageButton"
             android:layout_width="0dp"
@@ -59,4 +63,24 @@
             android:scaleType="fitCenter"
             android:src="@drawable/profile" />
     </LinearLayout>
+
+
+    <ImageButton
+        android:id="@+id/logoHelpingHandsImage"
+        android:layout_width="100dp"
+        android:layout_height="80dp"
+        android:layout_marginLeft="40dp"
+        android:layout_marginTop="5dp"
+        android:layout_marginRight="40dp"
+        android:layout_marginBottom="5dp"
+        android:layout_alignParentBottom="true"
+        android:paddingBottom="10dp"
+        android:layout_weight="1"
+        android:background="@android:color/transparent"
+        android:scaleType="fitCenter"
+        android:src="@drawable/logo"
+        android:adjustViewBounds="true"
+        android:layout_centerHorizontal="true"
+        android:elevation="10dp"/> <!-- Adjust the maxHeight as needed -->
+
 </RelativeLayout>
